--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <style></style>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
 
-  <body>
-    <canvas id="canvas1"></canvas>
+  <body style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center">
+    <canvas id="canvas1" style="border: 2px solid coral; height: 600px; width: 600px"></canvas>
 
     <!-- <script type="module" src="./dist/index.js"></script> -->
     <script type="module" src="index.ts"></script>
