--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
   </head>
 
   <body style="width: 100vw; height: 100vh; display: flex; justify-content: center; align-items: center">
-    <canvas id="canvas1" style="border: 2px solid coral; height: 600px; width: 600px"></canvas>
+    <div style="position: relative">
+      <canvas id="canvas1" style="border: 2px solid coral; height: 600px; width: 600px"> </canvas>
+      <select
+        name="playerState"
+        id="playerState"
+        style="position: absolute; left: 50%; transform: translateX(-50%); top: -20px; border: 2px solid coral"
+      ></select>
+    </div>
 
     <!-- <script type="module" src="./dist/index.js"></script> -->
     <script type="module" src="index.ts"></script>
